--- a/ios/takePicture.xcodeproj/xcshareddata/xcschemes/takePicture.xcscheme
+++ b/ios/takePicture.xcodeproj/xcshareddata/xcschemes/takePicture.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "takePicture.app"
-               BlueprintName = "takePicture"
-               ReferencedContainer = "container:takePicture.xcodeproj">
+               BuildableName = "testRegister.app"
+               BlueprintName = "testRegister"
+               ReferencedContainer = "container:testRegister.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "takePictureTests.xctest"
-               BlueprintName = "takePictureTests"
-               ReferencedContainer = "container:takePicture.xcodeproj">
+               BuildableName = "testRegisterTests.xctest"
+               BlueprintName = "testRegisterTests"
+               ReferencedContainer = "container:testRegister.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "takePicture.app"
-            BlueprintName = "takePicture"
-            ReferencedContainer = "container:takePicture.xcodeproj">
+            BuildableName = "testRegister.app"
+            BlueprintName = "testRegister"
+            ReferencedContainer = "container:testRegister.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "takePicture.app"
-            BlueprintName = "takePicture"
-            ReferencedContainer = "container:takePicture.xcodeproj">
+            BuildableName = "testRegister.app"
+            BlueprintName = "testRegister"
+            ReferencedContainer = "container:testRegister.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
